Missing span tags fixed and alignment fixed

--- a/dm-frontend/style.css
+++ b/dm-frontend/style.css
@@ -163,7 +163,7 @@ nav.mdl-navigation {
 	position: absolute;
 	border: 2px solid rgb(0, 77, 192);
 	left: 0;
-	top: 10%;
+	top: 0.5%;
 	right: 0;
 	display: none;
 	z-index: 101;
